# chat_bot

./: BLEU score test (final, bleu=0.3970).csv  BLEU score test (final, bleu=0.4209).csv  BLEU_score_results_(100-150)_promt.csv  BLEU_score_results_(60-70).csv  bert_test.py  bleu_score_test.py  calculate_f1_scores.py  f1_scores_global_20250518_130044.csv  f1_scores_summary_20250518_105516.csv  generator.py  generator1.py  generator_api.py  main.py  paraphrase-multilingual-mpnet-base-v2 (k=5) (bleu=0.7723672092125428).csv  pyproject.toml  retriever.py  retriever1.py  test.py  tokenizer_tests.py  train.py  validate.py
LaBSE/: LaBSE (k=3) (bleu=0.691012183558451).csv  LaBSE (k=4) (bleu=0.7281799471534959).csv  LaBSE (k=5) (bleu=0.7735440282024264).csv  LaBSE (k=6) (bleu=0.7883806257638651).csv
Paraphraze/: paraphrase-multilingual-mpnet-base-v2 (k=3) (bleu=0.6885628134940293).csv  paraphrase-multilingual-mpnet-base-v2 (k=6) (bleu=0.7965177260741905).csv  paraphrase-multilingual-v2 (k=4) (bleu=0.737122320461133).csv
bleu_scores/: BLEU score test (bleu=0.39309059229984056).csv  BLEU_score_results.csv  BLEU_score_results_2.csv
f1_global/: Generated_answers_LLama.csv  Generated_answers_Phi.csv  Generated_answers_Qwen.csv
tests/: generator.py  main.py  retriever.py  sberbank-ai--rugpt3large_based_on_gpt2 + sentence-transformers--paraphrase-multilingual-mpnet-base-v2 (bleu=0.20334400544369313).csv  sberbank-ai--rugpt3large_based_on_gpt2 + sentence-transformers--paraphrase-multilingual-mpnet-base-v2 (bleu=0.20504030134434298).csv
