[project]
name = "dpo-project"
version = "0.1.0"
description = "Chat bot for Telegram"
authors = [
    {name = "stoicismguy",email = "pyzan55@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets (>=3.5.0,<4.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "python-telegram-bot (>=22.0,<23.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "blobfile (>=3.0.0,<4.0.0)",
    "protobuf (>=6.30.2,<7.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "transformers (>=4.51.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
